# OvalEyes

./: .breakpoints  .gitignore  LICENSE  README.md  app.py  functions.py  ideas.txt  log.txt  main.py  notes.txt  pyproject.toml  readme.txt  requirements.txt  storage.pfps
static/: error.css  main.css  modal.css  navbar.css
templates/: adddesc.html  addpfp.html  changeemail.html  changepassword.html  deleteaccount.html  editcomment.html  editpost.html  error.html  follow.html  forgotpassword.html  frs.html  index.html  login.html  makepost.html  makereport.html  notifs.html  post.html  posts.html  profile.html  reports.html  settings.html  signup.html  success.html
