[tool.poetry]
name = "repl_python3_VulcanWM"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.4"
flask = "^2.0.1"
werkzeug = "^2.0.1"
dnspython = "^2.1.0"
flask-sqlalchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
